Sprint02 - Corrigido erro de 'array out of bound' em alguns repositórios